Added prototypes and writeups

--- a/css/font.css
+++ b/css/font.css
@@ -8,6 +8,8 @@
 .font_8 {font: normal normal normal 16px/1.4em didot-w01-italic,serif ;color:#FFFFFF;}
 .font_9 {font: normal normal normal 14px/1.4em avenir-lt-w01_35-light1475496,sans-serif ;color:#FFFFFF;}
 .font_10 {font: normal normal normal 12px/1.4em din-next-w01-light,din-next-w02-light,din-next-w10-light,sans-serif ;color:#DBD9D7;}
+.font_11 {font: normal normal normal 18px/1.4em didot-w01-italic,serif ;color:#87837E;}
+.font_12 {font: normal normal normal 20px/1.4em didot-w01-italic,serif ;color:#87837E;}
 
 
 .backcolor_0 {background-color: #FFFFFF;}
