--- a/css/d3/raitings.css
+++ b/css/d3/raitings.css
@@ -43,5 +43,22 @@ text#toplabel {
   border-radius: 10px;
   font-family: sans-serif;
   font-size: 10pt;
+  text-align: left;
   color: black;
+}
+
+.line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 2px;
+}
+
+.grid line {
+  stroke: lightgrey;
+  stroke-opacity: 0.7;
+  shape-rendering: crispEdges;
+}
+
+.grid path {
+  stroke-width: 0;
 }
